# mlir

./: CMakeLists.txt  README.md  benchmark.py  export_weights.py  fc_avx512_inference.cpp  fc_inference.cpp  fc_model.py  fc_weights.h
